# specreq

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
plans/: specreq-next-steps.md
scripts/: publish.py
src/specreq/: __init__.py  cli.py
tests/: test_cli.py  test_publish.py  test_readme.py  test_req.py  test_requirement.py
