[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "specreq"
version = "0.1.0"
description = "Write product specs as Python code."
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "William Hogben", email = "will@willhogben.com" },
]
urls.Homepage = "https://willhogben.com"
urls.Repository = "https://github.com/whogben/specreq"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
]

[project.scripts]
specreq = "specreq.cli:app"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
